--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,1 +1,8 @@
 /* Write your custom CSS here */
+.forgot-box .logo-name {
+    display: block;
+    font-size: 22px;
+    font-weight: 700;
+    text-decoration: none;
+    color: #6c6c6c;
+}
