--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -6,3 +6,13 @@
     text-decoration: none;
     color: #6c6c6c;
 }
+ .errormessage,.erroruser,.errorpass {
+	text-align: center;
+    color: red;
+
+}
+.errorinput
+{
+	  border-style: solid;
+    border-color: red;
+}
